--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -15,19 +15,19 @@ body {
     align-items: center;
     height: 100%;
 
+    .mobile-menu-icon {
+      width: 35px;
+      height: 35px;
+      display: none;
+      @media (max-width: 768px) {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+    }
+
     .logo-section {
       display: flex;
-      .icon-list {
-        img {
-          cursor: pointer;
-          width: 23px;
-          height: 28px;
-
-          &:first-child {
-            margin-right: 5px;
-          }
-        }
-      }
 
       .divider {
         margin-left: 170px;
@@ -35,6 +35,9 @@ body {
         height: 30px;
         background: #D8D8D8;
         border-radius: 1px;
+        @media (max-width: 768px) {
+          display: none;
+        }
       }
     }
 
@@ -56,6 +59,10 @@ body {
         &.active {
           opacity: 1;
         }
+
+        @media (max-width: 768px) {
+          display: none;
+        }
       }
 
       button {
@@ -71,6 +78,49 @@ body {
           font-size: 14px;
         }
       }
+    }
+
+    .mobile-menu {
+      position: fixed;
+      z-index: 1100;
+      width: 0%;
+      height: 100%;
+      transition: all 0.5s ease 0s;
+      top: 0px;
+      left: 0px;
+      background-color: white;
+      overflow: auto;
+      > div {
+        padding: 15px;
+
+        .logo-icon-list {
+          img {
+            width: 40px;
+            height: 40px;
+          }
+        }
+        .mobile-menu-list {
+          margin-top: 20px;
+          > div {
+            color: #777E91;
+            font-weight: 500;
+            font-size: 23px;
+          }
+        }
+      }
+
+    }
+
+    .overlay {
+      position: fixed;
+      z-index: 1000;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.3);
+      opacity: 1;
+      transition: opacity 0.3s ease 0s;
+      top: 0px;
+      left: 0px;
     }
   }
 }
