--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -5,7 +5,7 @@
   background: #141416;
 
   .container {
-    padding: 79px 24px;
+    padding: 79px 24px 34px 24px;
 
     .title {
       font-weight: 500;
@@ -85,6 +85,41 @@
           }
         }
         
+      }
+    }
+
+    .divider {
+      margin-top: 46px;
+      width: 100%;
+      height: 1px;
+      background: #E6E8EC;
+    }
+
+    .copylight-section {
+      margin-top: 25px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      .copylight {
+        font-size: 12px;
+        color: #646A79;
+      }
+
+      .cookies-bar {
+        color: #FFFFFF;
+        font-size: 12px;
+        .accept {
+          margin-left: 20px;
+          color: #3772FF;
+          font-size: 12px;
+          cursor: pointer;
+          transition: all 0.3s;
+
+          &:hover {
+            font-weight: 500;
+          }
+        }
       }
     }
   }
