--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -100,6 +100,11 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+      flex-direction: row;
+
+      @media (max-width: 576px) {
+        flex-direction: column;
+      }
 
       .copylight {
         font-size: 12px;
@@ -119,6 +124,9 @@
           &:hover {
             font-weight: 500;
           }
+        }
+        @media (max-width: 576px) {
+          margin-top: 15px;
         }
       }
     }
