--- a/src/components/GetStarted/style.scss
+++ b/src/components/GetStarted/style.scss
@@ -4,6 +4,7 @@
 
 .get-started-section {
   padding: 145px 0 160px 0;
+  margin-top: 0 !important;
   .image-section {
     height: 700px;
     position: relative;
@@ -15,8 +16,13 @@
       left: -100px;
       top: 0px;
       position: absolute;
+      @media (max-width: 1024px) {
+        width: 470px;
+        left: -20px;
+      }
       @media (max-width: 768px) {
         left: 0px;
+        width: auto;
       }
       @media (max-width: 576px) {
         width: 300px;
@@ -26,8 +32,13 @@
       left: 25px;
       top: -30px;
       position: absolute;
+      @media (max-width: 1024px) {
+        width: 380px;
+        left: 70px;
+      }
       @media (max-width: 768px) {
         left: 125px;
+        width: auto;
       }
       @media (max-width: 576px) {
         width: 250px;
@@ -38,8 +49,13 @@
       left: 110px;
       top: -65px;
       position: absolute;
+      @media (max-width: 1024px) {
+        width: 400px;
+        left: 110px;
+      }
       @media (max-width: 768px) {
         left: 220px;
+        width: auto;
       }
       @media (max-width: 576px) {
         width: 260px;
