--- a/src/components/GetStarted/style.scss
+++ b/src/components/GetStarted/style.scss
@@ -8,6 +8,12 @@
   .image-section {
     height: 700px;
     position: relative;
+    @media (max-width: 1024px) {
+      height: 400px;
+    }
+    @media (max-width: 768px) {
+      height: 700px;
+    }
     @media (max-width: 576px) {
       height: 400px;
     }
