--- a/src/components/CashPayment/style.scss
+++ b/src/components/CashPayment/style.scss
@@ -56,10 +56,14 @@
       }
 
       .learn-more {
-        cursor: pointer;
         font-weight: bold;
         font-size: 16px;
         color: #3772FF;
+        text-transform: initial;
+        padding: 0px;
+        span {
+          justify-content: flex-start;
+        }
       }
     }
   }
