--- a/src/components/PaymentGateway/style.scss
+++ b/src/components/PaymentGateway/style.scss
@@ -12,6 +12,8 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    box-shadow: 0px 2px 35px rgba(0, 0, 0, 0.03);
+    border-radius: 15px;
 
     .title {
       font-weight: bold;
