--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -20,6 +20,14 @@
         font-size: 20px;
         color: #FFFFFF;
       }
+      .logo-icon-list {
+        display: flex;
+        align-items: center;
+        span {
+          margin-left: 30px;
+          color: white;
+        }
+      }
     }
 
     .menu-section {
