--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -28,9 +28,23 @@ body {
 
     .logo-section {
       display: flex;
+      align-items: center;
+
+      .header-logo {
+        margin-left: 30px;
+        box-sizing: border-box;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 140px;
+        height: 19.36px;
+        @media (max-width: 576px) {
+          display: none;
+        }
+      }
 
       .divider {
-        margin-left: 170px;
+        margin-left: 90px;
         width: 2px;
         height: 30px;
         background: #D8D8D8;
