Update: header logo

--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -31,6 +31,7 @@ body {
       align-items: center;
 
       .header-logo {
+        cursor: pointer;
         margin-left: 30px;
         box-sizing: border-box;
         background-position: center;
