Update: email editor style

--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -65,6 +65,7 @@
         }
 
         .email-input-box {
+          box-sizing: border-box;
           margin-top: 25px;
           border: 2px solid #E6E8EC;
           border-radius: 50px;
