--- a/src/components/GetStarted/style.scss
+++ b/src/components/GetStarted/style.scss
@@ -5,6 +5,8 @@
 .get-started-section {
   padding: 145px 0 160px 0;
   margin-top: 0 !important;
+  font-family: 'Poppins', sans-serif;
+
   .image-section {
     height: 700px;
     position: relative;
@@ -86,12 +88,14 @@
 
   .action {
     .title {
+      font-family: 'Poppins', sans-serif;
       font-weight: bold;
       font-size: 60px;
       color: #FFFFFF;
       margin-bottom: 30px;
 
       .highlight {
+        font-family: 'Poppins', sans-serif;
         color: #3772FF;
         font-weight: bold;
         font-size: 60px;
