--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -1,13 +1,11 @@
 /*
   Header
 */
-body {
-  margin: 0px;
-}
 
 .header {
   background: #141416;
   height: 70px;
+  font-family: 'Poppins', sans-serif;
 
   .container {
     display: flex;
@@ -62,6 +60,7 @@ body {
       justify-content: space-between;
 
       a {
+        font-family: 'Poppins', sans-serif;
         text-decoration: none;
         font-weight: 600;
         font-size: 15px;
@@ -89,8 +88,12 @@ body {
         text-transform: initial;
 
         span {
-          font-weight: 500;
+          font-family: 'Poppins', sans-serif;
+          font-style: normal;
+          font-weight: 400;
           font-size: 14px;
+          line-height: 21px;
+          letter-spacing: -0.2px;
         }
       }
     }
