--- a/src/components/PaymentGateway/style.scss
+++ b/src/components/PaymentGateway/style.scss
@@ -4,6 +4,7 @@
 
 .payment-gateway-section {
   padding: 200px 0px;
+  font-family: 'Poppins', sans-serif;
 
   .payment-content-box {
     width: 100%;
