--- a/src/components/CashPayment/style.scss
+++ b/src/components/CashPayment/style.scss
@@ -4,6 +4,7 @@
 
 .cash-payment-section {
   padding: 96px 0 80px 0;
+  font-family: 'Poppins', sans-serif;
 
   .notification {
     font-weight: bold;
