--- a/src/components/DownloadApp/style.scss
+++ b/src/components/DownloadApp/style.scss
@@ -4,6 +4,8 @@
 
 .download-app-section {
   padding-bottom: 60px;
+  font-family: 'Poppins', sans-serif;
+  
   .notification {
     text-align: center;
     font-weight: bold;
