--- a/src/components/DownloadApp/style.scss
+++ b/src/components/DownloadApp/style.scss
@@ -7,6 +7,7 @@
   font-family: 'Poppins', sans-serif;
   
   .notification {
+    font-family: 'Poppins', sans-serif;
     text-align: center;
     font-weight: bold;
     font-size: 15px;
@@ -15,6 +16,7 @@
   }
 
   .title {
+    font-family: 'Poppins', sans-serif;
     margin-top: 15px;
     font-weight: 600;
     font-size: 38px;
