--- a/src/components/GetStarted/style.scss
+++ b/src/components/GetStarted/style.scss
@@ -93,6 +93,12 @@
       font-size: 60px;
       color: #FFFFFF;
       margin-bottom: 30px;
+      line-height: 65px;
+      letter-spacing: -0.9375px;
+
+      @media (max-width: 576px) {
+        font-size: 51px;
+      }
 
       .highlight {
         font-family: 'Poppins', sans-serif;
@@ -131,6 +137,7 @@
         background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), linear-gradient(101deg, #7DC0FF, #F199DA, #F7AF85);
         background-origin: border-box;
         box-shadow: 2px 1000px 1px #000000 inset, 0px 0px 40px #cf77f3, 0px 0px 40px #009bff, 0px 0px 1px #2ac9db;
+        font-family: 'Poppins', sans-serif;
       }
 
       .learn-more {
@@ -140,6 +147,8 @@
         font-size: 14px;
         color: #3772FF;
         text-transform: initial;
+        font-family: 'Poppins', sans-serif;
+
         button {
           margin-left: 20px;
           svg {
