--- a/src/components/PaymentGateway/style.scss
+++ b/src/components/PaymentGateway/style.scss
@@ -17,6 +17,7 @@
     border-radius: 15px;
 
     .title {
+      font-family: 'Poppins', sans-serif;
       font-weight: bold;
       text-align: center;
       font-size: 40px;
@@ -27,6 +28,7 @@
       display: flex;
       justify-content: center;
       p {
+        font-family: 'Poppins', sans-serif;
         width: 60%;
         text-align: center;
         margin: 17px 0px 37px;
@@ -41,6 +43,7 @@
       text-align: center;
 
       button {
+        font-family: 'Poppins', sans-serif;
         background: #FFFFFF;
         border-radius: 23px;
         font-weight: bold;
