--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -30,6 +30,7 @@
           font-family: 'Poppins', sans-serif;
           margin-left: 30px;
           color: white;
+          font-size: 23px;
         }
       }
     }
