Update: footer style

--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -36,6 +36,7 @@
     }
 
     .menu-section {
+      padding-top: 5px;
       display: flex;
       justify-content: center;
       @media (max-width: 960px) {
@@ -62,6 +63,7 @@
     }
 
     .stay-connected-section {
+      padding-top: 5px;
       .email-input-section {
         margin-top: 39px;
         .description {
