Add [email sbuscribe] feature

--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -134,6 +134,10 @@
             }
           }
         }
+        .subscribe-form-sending{
+          color:#FFFFFF;
+          text-align: center;
+        }
         
       }
     }
